--- a/client/src/index.css
+++ b/client/src/index.css
@@ -116,6 +116,19 @@
   display: block;
 }
 
+.loading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: 'Grand Hotel', cursive;
+}
+
 .profile {
   margin-top: 7rem;
 }
@@ -128,18 +141,19 @@
       flex-wrap: wrap;
 }
 
-.profile .gallery a {
-  margin: 0;
-  padding: 0;
+.profile .gallery a img {
+  height: 100%;
+  width: 100%;
 }
 
 .profile .gallery img {
-  height: 280px;
-  width: 230px;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
 .profile .gallery img:hover {
-  border: 2px solid #b9b6b6;
+  cursor: pointer;
   opacity: .9;
 }
 
@@ -166,10 +180,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .profile .pic img {
@@ -178,7 +191,7 @@
   padding: 5px;
   overflow: hidden;
   border-radius: 50%;
-  border: 1px solid #888585;
+  border: 1px solid #9209ee;
 }
 
 .profile .follow {
