--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -105,21 +105,27 @@
         button{display: block;}
     }
 }
-
+.loading{
+    @include flexprop();
+    font-family: 'Grand Hotel', cursive;
+}
 .profile{
     margin-top: 7rem;
     .gallery{
         display: flex;
         flex-wrap: wrap;
         a{
-            margin: 0;
-            padding: 0;
+            img{
+                height: 100%;
+                width: 100%;
+            }
         }
         img{
-            height: 280px;
-            width: 230px;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
             &:hover{
-                border: 2px solid rgb(185, 182, 182);
+                cursor: pointer;
                 opacity: .9;
             }
         }
@@ -139,14 +145,14 @@
     }
     .pic{
         @include flexprop();
-        flex-direction: column;
+        align-items: flex-start;
         img{
         width: 160px;
         height: 160px;
         padding: 5px;
         overflow: hidden;
         border-radius: 50%;
-        border: 1px solid rgb(136, 133, 133)
+        border: 1px solid rgb(146, 9, 238)
         }
     }
     .follow{
